Settings: Fix header title wrapping (#3325)

--- a/src/components/left/LeftColumn.scss
+++ b/src/components/left/LeftColumn.scss
@@ -17,6 +17,9 @@
     margin-left: 1.375rem;
     margin-right: auto;
     user-select: none;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   .SearchInput {
